--- a/portfolio.html
+++ b/portfolio.html
@@ -5,31 +5,54 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>My Portfolio</title>
 </head>
 <body>
-<div>
-	<h1>Alexander Gonzalez</h1>
 
-	<a href="index.html">About</a>
-	<a href="portfolio.html">Portfolio</a>
-	<a href="contact.html">Contact</a>
+<header>
+	<div class="row">
+
+		<div class="col logo">
+			<h1 id="h-style1">Alexander Gonzalez</h1>
+		</div>
+
+		<div class="col headerLinks">
+			<a href="index.html">About</a>
+			|
+			<a href="portfolio.html">Portfolio</a>
+			|
+			<a href="contact.html">Contact</a>
+		</div>
+
+	</div>
+
+</header>
+
+<div class="entireContentArea">
+	<div class="maincontent">
+		<h1 id="h-style2">Portfolio</h1>
+		<hr id="hrStyle1">
+		<a href="">Hangman</a><br>
+		<a href="">RPG Game</a><br>
+		<a href="">Trivia Game</a><br>
+		<a href="">Rutgers Info Widget</a><br>
+		<a href="">Rock Paper Scissors</a><br>
+	</div>
+
+	<div class="sidecontent">
+		<h2 id="h-style2">Connect with Me</h2>
+		<hr id="hrStyle2">
+		<a href=""><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
+		<a href=""><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
+		<a href=""><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+	</div>
+
+	<div class="push"></div>
+
 </div>
 
-<div>
-	<h1>Portfolio</h1>
-	<a href="">Hangman</a><br>
-	<a href="">RPG Game</a><br>
-	<a href="">Trivia Game</a><br>
-	<a href="">Rutgers Info Widget</a><br>
-	<a href="">Rock Paper Scissors</a><br>
-</div>
-
-<div>
-	<h2>Connect with Me</h2>
-	<a href=""><img src="assets/images/GitHub.png" height="50px" width="50px"></a>
-	<a href=""><img src="assets/images/LinkedIn.png"></a>
-</div>
+<footer class="footer">© Copyright 2018 Alexander Gonzalez</footer>
 
 </body>
 </html>
