Added more to the portfolio page and got all sidebar links working

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	<div class="sidecontent">
 		<h2 id="h-style2">Connect with Me</h2>
 		<hr id="hrStyle2">
-		<a href=""><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
-		<a href=""><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
-		<a href=""><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+		<a href="https://github.com/agonz519" target="_blank"><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
+		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
+		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
 	</div>
 
 	<div class="push"></div>
