--- a/portfolio.html
+++ b/portfolio.html
@@ -33,19 +33,45 @@
 	<div class="maincontent">
 		<h1 id="h-style2">Portfolio</h1>
 		<hr id="hrStyle1">
-		<a href="">Hangman</a><br>
-		<a href="">RPG Game</a><br>
-		<a href="">Trivia Game</a><br>
-		<a href="">Rutgers Info Widget</a><br>
-		<a href="">Rock Paper Scissors</a><br>
+
+		<table>
+			<tr>
+				<td>
+					<a href=""><img src="assets/images/hangman.jpg" "200px" width="270px"></a><br>
+					HANGMAN
+				</td>
+				<td>
+					<a href=""><img src="assets/images/rpg_game.png" "200px" width="270px"></a><br>
+					RPG GAME
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href=""><img src="assets/images/trivia.jpg" "200px" width="270px"></a><br>
+					TRIVIA
+				</td>
+				<td>
+					<a href=""><img src="assets/images/rutgers.jpg" "200px" width="270px"></a><br>
+					RUTGERS INFO WIDGET
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href=""><img src="assets/images/rockpaper.jpg" "200px" width="270px"></a><br>
+					ROCK PAPER SCISSORS
+				</td>
+				<td></td>
+			</tr>
+		</table>
+
 	</div>
 
 	<div class="sidecontent">
 		<h2 id="h-style2">Connect with Me</h2>
 		<hr id="hrStyle2">
-		<a href=""><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
-		<a href=""><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
-		<a href=""><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+		<a href="https://github.com/agonz519" target="_blank"><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
+		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
+		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
 	</div>
 
 	<div class="push"></div>
