--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>About Me</title>
 </head>
@@ -13,7 +14,7 @@
 
 <header>
 	<div class="row">
-
+		<div id="sideBuffer" class="col"></div>
 		<div class="col logo">
 			<h1 id="h-style1">Alexander Gonzalez</h1>
 		</div>
@@ -25,6 +26,7 @@
 			|
 			<a href="contact.html">Contact</a>
 		</div>
+		<div id="sideBuffer" class="col"></div>
 
 	</div>
 
@@ -61,9 +63,9 @@
 		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
 	</div>
 
-	<div class="push"></div>
-
 </div>
+
+<div class="extraSpace"></div>
 
 <footer class="footer">© Copyright 2018 Alexander Gonzalez</footer>
 
