--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>My Portfolio</title>
 </head>
@@ -77,6 +78,8 @@
 	<div class="push"></div>
 
 </div>
+
+<div class="extraSpace"></div>
 
 <footer class="footer">© Copyright 2018 Alexander Gonzalez</footer>
 
