Added a few things to contact page. Working on positioning in Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
 		<table>
 			<tr>
 				<td>
-					<a href=""><img src="assets/images/hangman.jpg" "200px" width="270px"></a><br>
-					HANGMAN
+					<a id="pos1" href=""><img src="assets/images/hangman.jpg" "200px" width="270px"></a><br>
+					<h3>HANGMAN</h3>
 				</td>
 				<td>
 					<a href=""><img src="assets/images/rpg_game.png" "200px" width="270px"></a><br>
