--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
 		<hr id="hrStyle1">
 		<form action="mailto:agonz519@gmail.com?subject=Hello%20Alex%21" method="post" enctype="text/plain">
 			Name<br>
-			<input type="text" name="name"><br>
+			<input type="text" name="name" placeholder="John Smith"><br>
 			Email<br>
-			<input type="email" name="email"><br>
+			<input type="email" name="email" placeholder="example@gmail.com"><br>
 			Message<br>
 			<textarea name="message" rows="10" cols="70"></textarea><br>
-			<input type="submit" value="Submit">
-			<input type="reset" value="Reset">
+			<input class="button" type="submit" value="Submit">
+			<input class="button" type="reset" value="Reset">
 		</form>
 
 	</div>
