--- a/portfolio.html
+++ b/portfolio.html
@@ -38,28 +38,39 @@
 		<table>
 			<tr>
 				<td>
-					<a id="pos1" href=""><img src="assets/images/hangman.jpg" "200px" width="270px"></a><br>
-					<h3>HANGMAN</h3>
+					<div id="pos1">
+						<a href=""><img src="assets/images/hangman.jpg" height="200px" width="270px"></a><br>
+						<h3>Hangman</h3>
+					</div>
+
 				</td>
 				<td>
-					<a href=""><img src="assets/images/rpg_game.png" "200px" width="270px"></a><br>
-					RPG GAME
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href=""><img src="assets/images/trivia.jpg" "200px" width="270px"></a><br>
-					TRIVIA
-				</td>
-				<td>
-					<a href=""><img src="assets/images/rutgers.jpg" "200px" width="270px"></a><br>
-					RUTGERS INFO WIDGET
+					<div id="pos1">
+						<a href=""><img src="assets/images/rpg_game.png" height="200px" width="270px"></a><br>
+						<h3>RPG Game</h3>
+					</div>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<a href=""><img src="assets/images/rockpaper.jpg" "200px" width="270px"></a><br>
-					ROCK PAPER SCISSORS
+					<div id="pos1">
+						<a href=""><img src="assets/images/trivia.jpg" height="200px" width="270px"></a><br>
+						<h3>Trivia</h3>
+					</div>
+				</td>
+				<td>
+					<div id="pos1">
+						<a href=""><img src="assets/images/rutgers.jpg" height="200px" width="270px"></a><br>
+						<h3>Rutgers Info Widget</h3>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div id="pos1">
+						<a href=""><img src="assets/images/rockpaper.jpg" height="200px" width="270px"></a><br>
+						<h3>Rock Paper Scissors</h3>
+					</div>
 				</td>
 				<td></td>
 			</tr>
