Finished tweaking homework

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>Contact Me</title>
 </head>
@@ -21,9 +20,9 @@
 
 		<div class="col headerLinks">
 			<a href="index.html">About</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="portfolio.html">Portfolio</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="contact.html">Contact</a>
 		</div>
 
@@ -33,7 +32,7 @@
 
 <div class="entireContentArea">
 	<div class="maincontent">
-		<h1 id="h-style2">Contact</h1>
+		<h1 class="h-style2">Contact</h1>
 		<hr id="hrStyle1">
 		<form action="mailto:agonz519@gmail.com?subject=Hello%20Alex%21" method="post" enctype="text/plain">
 			Name<br>
@@ -49,11 +48,11 @@
 	</div>
 
 	<div class="sidecontent">
-		<h2 id="h-style2">Connect with Me</h2>
+		<h2 class="h-style2">Connect with Me</h2>
 		<hr id="hrStyle2">
-		<a href="https://github.com/agonz519" target="_blank"><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
-		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
-		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+		<a href="https://github.com/agonz519" target="_blank"><img class="linkImages" src="assets/images/GitHub.png" alt="github icon"></a>
+		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img class="linkImages" src="assets/images/LinkedIn.png" alt="linkedin icon"></a>
+		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img class="linkImages" src="assets/images/StackOverflow.png" alt="stack overflow icon"></a>
 	</div>
 
 	<div class="push"></div>
