--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<title>About Me</title>
@@ -15,19 +14,19 @@
 
 <header>
 	<div class="row">
-		<div id="sideBuffer" class="col"></div>
-		<div class="col logo">
+
+		<div class="logo">
 			<h1 id="h-style1">Alexander Gonzalez</h1>
 		</div>
 
-		<div class="col headerLinks">
+		<div class="headerLinks">
 			<a href="index.html">About</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="portfolio.html">Portfolio</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="contact.html">Contact</a>
 		</div>
-		<div id="sideBuffer" class="col"></div>
+
 
 	</div>
 
@@ -35,33 +34,36 @@
 
 <div class="entireContentArea">
 	<div class="maincontent">
-		<h1 id="h-style2">About Me</h1>
+		<h1 class="h-style2">About Me</h1>
 		<hr id="hrStyle1">
-		<img id="lefty" src="assets/images/Alex.jpg" height="225px" width="225px" alt="my mugshot">
+		<img id="profileImage" class="lefty" src="assets/images/Alex.jpg" alt="my mugshot">
 		<p>
-			Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the
-			most popular gun in American crime. Do you believe that shit? It actually says that in the
-			little book that comes with it: the most popular gun in American crime. Like they're actually
-			proud of that shit.
+			Hello there! First the boring stuff... I was born and raised in the Atlanta area. I graduated
+			from Georgia State University with a Comp Sci degree. My focus was on human computer
+			interaction & graphics so I didn't do much code. I had a few coding classes but
+			after graduating I didn't put any of it to practice. After school I started working in software
+			quality assurance and have now been doing that for over 4 years. I'm currently part of the GATech
+			Coding Bootcamp because I want to sharpen my technical skills and become a web developer!
 		</p>
-
+		<br>
 		<p>
-			The path of the righteous man is beset on all sides by the iniquities of the selfish and
-			the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the
-			weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost
-			children. And I will strike down upon thee with great vengeance and furious anger those who would
-			attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My
-			vengeance upon thee.
+			...And now the fun stuff. I might be SUPER serious when you first meet me, but soon after you'll
+			discover I'm actually SUPER silly. I like to joke around and I'd say I have a great sense of humor.
+			I'm a pretty laid back dude so you'd have to be a huge jerk to offend me. I enjoy hiking and try to
+			do so whenever I get the chance. I really enjoy gaming on my PC or PS4 and have recently gotten into
+			VR gaming which is quite a trip! As far as music goes I listen to various genres but mostly
+			rock & metal. I used to hang out quite a bit in East Atlanta Village, and still enjoy making a trip
+			down from time to time. Feel free to reach out if you want to know more! Dueces!
 		</p>
 
 	</div>
 
 	<div class="sidecontent">
-		<h2 id="h-style2">Connect with Me</h2>
+		<h2 class="h-style2">Connect with Me</h2>
 		<hr id="hrStyle2">
-		<a href="https://github.com/agonz519" target="_blank"><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
-		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
-		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+		<a href="https://github.com/agonz519" target="_blank"><img class="linkImages" src="assets/images/GitHub.png" alt="github icon"></a>
+		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img class="linkImages" src="assets/images/LinkedIn.png" alt="linkedin icon"></a>
+		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img class="linkImages" src="assets/images/StackOverflow.png" alt="stack overflow icon"></a>
 	</div>
 
 </div>
