--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>My Portfolio</title>
 </head>
@@ -20,9 +19,9 @@
 
 		<div class="col headerLinks">
 			<a href="index.html">About</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="portfolio.html">Portfolio</a>
-			|
+			<div class="pipeColor"> &nbsp; &nbsp; | &nbsp; &nbsp; </div>
 			<a href="contact.html">Contact</a>
 		</div>
 
@@ -32,44 +31,44 @@
 
 <div class="entireContentArea">
 	<div class="maincontent">
-		<h1 id="h-style2">Portfolio</h1>
+		<h1 class="h-style2">Portfolio</h1>
 		<hr id="hrStyle1">
 
 		<table>
 			<tr>
 				<td>
-					<div id="pos1">
-						<a href=""><img src="assets/images/hangman.jpg" height="200px" width="270px"></a><br>
-						<h3>Hangman</h3>
+					<div class="pos1">
+						<a href=""><img class="portfolioImage" src="assets/images/hangman.jpg" alt="hangman's noose"><br>
+						<h3>Hangman</h3></a>
 					</div>
 
 				</td>
 				<td>
-					<div id="pos1">
-						<a href=""><img src="assets/images/rpg_game.png" height="200px" width="270px"></a><br>
-						<h3>RPG Game</h3>
+					<div class="pos1">
+						<a href=""><img class="portfolioImage" src="assets/images/rpg_game.png" alt="cartoony floating island"><br>
+						<h3>RPG Game</h3></a>
 					</div>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<div id="pos1">
-						<a href=""><img src="assets/images/trivia.jpg" height="200px" width="270px"></a><br>
-						<h3>Trivia</h3>
+					<div class="pos1">
+						<a href=""><img class="portfolioImage" src="assets/images/trivia.jpg" alt="trivia written in a fancy style"><br>
+						<h3>Trivia</h3></a>
 					</div>
 				</td>
 				<td>
-					<div id="pos1">
-						<a href=""><img src="assets/images/rutgers.jpg" height="200px" width="270px"></a><br>
-						<h3>Rutgers Info Widget</h3>
+					<div class="pos1">
+						<a href=""><img class="portfolioImage" src="assets/images/rutgers.jpg" alt="Some hot dogs because I don't know what this is"><br>
+						<h3>Rutgers Info Widget</h3></a>
 					</div>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<div id="pos1">
-						<a href=""><img src="assets/images/rockpaper.jpg" height="200px" width="270px"></a><br>
-						<h3>Rock Paper Scissors</h3>
+					<div class="pos1">
+						<a href=""><img class="portfolioImage" src="assets/images/rockpaper.jpg" alt="A sign showing the symbols for rock and paper"><br>
+						<h3>Rock Paper Scissors</h3></a>
 					</div>
 				</td>
 				<td></td>
@@ -79,11 +78,11 @@
 	</div>
 
 	<div class="sidecontent">
-		<h2 id="h-style2">Connect with Me</h2>
+		<h2 class="h-style2">Connect with Me</h2>
 		<hr id="hrStyle2">
-		<a href="https://github.com/agonz519" target="_blank"><img src="assets/images/GitHub.png" height="58px" width="58px"></a>
-		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img src="assets/images/LinkedIn.png" height="58px" width="58px"></a>
-		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img src="assets/images/StackOverflow.png" height="58px" width="58px"></a>
+		<a href="https://github.com/agonz519" target="_blank"><img class="linkImages" src="assets/images/GitHub.png" alt="github icon"></a>
+		<a href="https://www.linkedin.com/in/alexander-gonzalez/" target="_blank"><img class="linkImages" src="assets/images/LinkedIn.png" alt="linkedin icon"></a>
+		<a href="https://stackoverflow.com/users/7969635/agonz?tab=profile" target="_blank"><img class="linkImages" src="assets/images/StackOverflow.png" alt="stack overflow icon"></a>
 	</div>
 
 	<div class="push"></div>
