--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
 		<hr id="hrStyle1">
 		<form action="mailto:agonz519@gmail.com?subject=Hello%20Alex%21" method="post" enctype="text/plain">
 			Name<br>
-			<input type="text" name="name" placeholder="John Smith"><br>
+			<input type="text" name="name" placeholder="John Smith" size="50"><br>
 			Email<br>
-			<input type="email" name="email" placeholder="example@gmail.com"><br>
+			<input type="email" name="email" placeholder="example@gmail.com" size="50"><br>
 			Message<br>
 			<textarea name="message" rows="10" cols="70"></textarea><br>
 			<input class="button" type="submit" value="Submit">
